Agregue la parte de ListaHabitaciones, agregue un css para modificar la tabla de listas

--- a/DataModels/MyDatabase.tt
+++ b/DataModels/MyDatabase.tt
@@ -116,7 +116,7 @@
 
 	// to configure GetSchemaOptions properties, add them here, before load metadata call
 
-	LoadSqlServerMetadata("Data Source=LAPTOP-57J4RFLP\\SQLEXPRESS;Database=PV_ProyectoFinal;Integrated Security=True");
+	LoadSqlServerMetadata("Data Source=LAPTOP-TKFN345G\\SQLEXPRESS;Database=PV_ProyectoFinal;Integrated Security=True");
 //	LoadSqlServerMetadata(".", "MyDatabase"); // Integrated Security
 //	LoadSqlServerMetadata(string connectionString);
 
