--- a/Site.Master
+++ b/Site.Master
@@ -49,8 +49,9 @@
                 <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/About">Acerca de</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Pages/Habitaciones/ListaHabitaciones.aspx">Lista Habitaciones</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Pages/Reservaciones/GestiornarReservaciones.aspx">Gestionar Reservaciones</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Pages/Reservaciones/MisReservaciones.aspx">Mis Reservaciones</a></li>
                     </ul>
                 </div>
             </div>
