--- a/Site.Master
+++ b/Site.Master
@@ -52,6 +52,17 @@
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Pages/Habitaciones/ListaHabitaciones.aspx">Lista Habitaciones</a></li>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Pages/Reservaciones/GestiornarReservaciones.aspx">Gestionar Reservaciones</a></li>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Pages/Reservaciones/MisReservaciones.aspx">Mis Reservaciones</a></li>
+
+                    </ul>
+
+                    <ul class="navbar-nav">
+                        <li class="nav-item ">
+                            <asp:Label ID="lblNombreCompleto" runat="server" Text="" Visible="false" CssClass="nav-link "></asp:Label>
+                        </li>
+                         <li class="nav-item ml-auto">
+                             <asp:Button ID="btnCerrarSesion" runat="server" Text="Cerrar Sesión" Visible="false" OnClick="btnCerrarSesion_Click" CssClass="btn btn-light btn-outline-secondary"/>
+                         </li>
+
                     </ul>
                 </div>
             </div>
