--- a/Site.Master
+++ b/Site.Master
@@ -38,9 +38,11 @@
                 <%--Site Scripts--%>
             </Scripts>
         </asp:ScriptManager>
-
+       
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
             <div class="container">
+                <%--logo--%>
+               <img src="~/Imagenes/Logo6.png" alt="Logo" style="height:60px; width:80px;"/>
                 <a class="navbar-brand" runat="server" href="~/">Gestión de Hoteles</a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Alternar navegación" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
