--- a/Site.Master
+++ b/Site.Master
@@ -38,37 +38,39 @@
                 <%--Site Scripts--%>
             </Scripts>
         </asp:ScriptManager>
-       
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
-            <div class="container">
-                <%--logo--%>
-               <img src="~/Imagenes/Logo6.png" alt="Logo" style="height:60px; width:80px;"/>
-                <a class="navbar-brand" runat="server" href="~/">Gestión de Hoteles</a>
-                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Alternar navegación" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/">Inicio</a></li>
-                        <li class="nav-item" ><a class="nav-link" runat="server" href="~/Pages/Habitaciones/ListaHabitaciones.aspx">Gestionar Habitaciones</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Pages/Reservaciones/GestionarReservaciones.aspx">Gestionar Reservaciones</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Pages/Reservaciones/MisReservaciones.aspx">Mis Reservaciones</a></li>
+        
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
+                <div class="container">
+                    <%--logo--%>
+                   <img src="~/Imagenes/Logo6.png" alt="Logo" style="height:60px; width:80px;" runat="server"/>
+                    <a class="navbar-brand" runat="server" href="~/">Hoteles de Costa Rica</a>
+                    <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Alternar navegación" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
+                        <ul class="navbar-nav flex-grow-1">
+                            <asp:PlaceHolder ID="phNav" runat="server" Visible="false">
+                                <li class="nav-item"><a class="nav-link" runat="server" href="~/">Inicio</a></li>
+                                <li class="nav-item" ><a class="nav-link" runat="server" href="~/Pages/Habitaciones/ListaHabitaciones.aspx">Gestionar Habitaciones</a></li>
+                                <li class="nav-item"><a class="nav-link" runat="server" href="~/Pages/Reservaciones/GestionarReservaciones.aspx">Gestionar Reservaciones</a></li>
+                                <li class="nav-item"><a class="nav-link" runat="server" href="~/Pages/Reservaciones/MisReservaciones.aspx">Mis Reservaciones</a></li>
+                            </asp:PlaceHolder>
+                        </ul>
 
-                    </ul>
-
-                    <ul class="navbar-nav">
-                        <li class="nav-item ">
-                            <asp:Label ID="lblNombreCompleto" runat="server" Text="" Visible="false" CssClass="nav-link "></asp:Label>
-                        </li>
-                         <li class="nav-item ml-auto">
-                           <asp:Button ID="btnCerrarSesion" runat="server" Text="Cerrar Sesión" Visible="false" OnClick="btnCerrarSesion_Click" CausesValidation="false" CssClass="btn btn-light btn-outline-secondary"/>
-                         </li>
+                        <ul class="navbar-nav">
+                            <li class="nav-item ">
+                                <asp:Label ID="lblNombreCompleto" runat="server" Text="" Visible="false" CssClass="nav-link "></asp:Label>
+                            </li>
+                             <li class="nav-item ml-auto">
+                               <asp:Button ID="btnCerrarSesion" runat="server" Text="Cerrar Sesión" Visible="false" OnClick="btnCerrarSesion_Click" CausesValidation="false" CssClass="btn btn-light btn-outline-secondary"/>
+                             </li>
                      
-                    </ul>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-        </nav>
+            </nav>
+        
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
